Added removing elements in BinarySearchTree, but I'm still working on it